[package]
name = "centipede"
version = "0.2.14"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"
curv = { package = "curv-kzen", version = "0.7", default-features = false }

[dependencies.bulletproof]
git = "https://github.com/dlhex/bulletproofs"
tag = "v0.1.17"
default-features = false

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv/rust-gmp-kzen"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
